--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "got": "^12.0.1",
     "jsdom": "^19.0.0",
