--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "axios": "^0.24.0",
-    "cheerio": "^1.0.0-rc.10",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.2",
-    "got": "^12.0.1",
-    "jsdom": "^19.0.0",
-    "moment": "^2.29.1",
-    "node": "^17.3.1",
-    "nodemailer": "^6.7.2",
-    "objects-to-csv": "^1.3.6",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "axios": "0.24.0",
+    "cheerio": "1.0.0-rc.10",
+    "dotenv": "16.0.0",
+    "express": "4.17.2",
+    "got": "12.0.1",
+    "jsdom": "19.0.0",
+    "moment": "2.29.1",
+    "node": "17.3.1",
+    "nodemailer": "6.7.2",
+    "objects-to-csv": "1.3.6",
+    "request": "2.88.2",
+    "request-promise": "4.2.6"
   },
   "devDependencies": {
     "@playwright/test": "^1.18.0",
