--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cheerio": "1.0.0-rc.10",
     "dotenv": "16.0.0",
     "express": "4.17.2",
+    "follow-redirects": "1.14.9",
     "got": "12.0.1",
     "jsdom": "19.0.0",
     "moment": "2.29.1",
